Restructure solution, add DI, AutoMapper, and middleware

--- a/Apresentacao/LocacaoCarros/LocacaoCarros.csproj
+++ b/Apresentacao/LocacaoCarros/LocacaoCarros.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dados\Dados\Dados.csproj" />
+    <ProjectReference Include="..\..\Negocio\Models\Negocio.csproj" />
+  </ItemGroup>
+
 </Project>
