--- a/Dados/Dados/Dados.csproj
+++ b/Dados/Dados/Dados.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Negocio\Models\Negocio.csproj" />
+  </ItemGroup>
+
 </Project>
